--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,1 +1,3 @@
-<p>About Us Page!</p>
+<h1>About Us Page!</h1>
+<p>This is an App for jotting down your next Youtube video ideas easily</p>
+<p>Version 1.0.0</p>
