--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,5 @@
-<h1>{{title}}</h1>
+<div class="jumbotron text-centre">
+  <h1 class="display-3">{{title}}</h1>
+  <p class="lead">Jot down your next video idea now!</p>
+  <a href="#"><button class="btn-dark btn-lg">Save Video Idea</button></a>
+</div>
