Subtitle on About

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,3 +1,3 @@
 <h1>About Us Page!</h1>
-<p>This is an App for jotting down your next Youtube video ideas easily</p>
+<p>{{subtitle}}</p>
 <p>Version 1.0.0</p>
