add edit db func to web forms

--- a/views/ideas/index.handlebars
+++ b/views/ideas/index.handlebars
@@ -3,7 +3,8 @@
 <div class="card card-body mb-2">
 <h4>{{title}}</h4>
 <p>{{details}}</p>
-
+<p>{{date}}</p>
+<a href="/ideas/edit/{{id}}" class="btn btn-dark block">edit</a>
 </div>
 
 {{else}}
