add message handlers for connect-flash

--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -19,7 +19,7 @@
       <li class="nav-item dropdown">
         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink">Video ideas</a>
         <div class="dropdown-menu">
-          <a href="ideas" class="dropdown-item">Ideas</a>
+          <a href="/ideas" class="dropdown-item">Ideas</a>
           <a href="ideas/add" class="dropdown-item">Ideas Add</a>
         </div>
       </li>
