--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -14,13 +14,21 @@
         <li class="nav-item">
           <a class="nav-link" href="/about">About</a>
         </li>
-      </ul>
+        </ul>
       <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/users/login">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/users/register">Register</a>
+        </li>
       <li class="nav-item dropdown">
         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink">Video ideas</a>
         <div class="dropdown-menu">
           <a href="/ideas" class="dropdown-item">Ideas</a>
           <a href="ideas/add" class="dropdown-item">Ideas Add</a>
+          <a href="users/logout" class="dropdown-item">Logout</a>
+         
         </div>
       </li>
       </ul>
