--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -27,7 +27,7 @@
         <div class="dropdown-menu">
           <a href="/ideas" class="dropdown-item">Ideas</a>
           <a href="ideas/add" class="dropdown-item">Ideas Add</a>
-          <a href="users/logout" class="dropdown-item">Logout</a>
+          <a href="#" class="dropdown-item">Logout</a>
          
         </div>
       </li>
