--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -8,28 +8,29 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/">Home
-          </a>
+          <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/about">About</a>
         </li>
-        </ul>
+      </ul>
       <ul class="navbar-nav ml-auto">
+        {{#if user}}
+        <li class="nav-item dropdown">
+          <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink">Video Ideas</a>
+          <div class="dropdown-menu">
+            <a href="/ideas" class="dropdown-item">Ideas</a>
+            <a href="/ideas/add" class="dropdown-item">Add Idea</a>
+          </div>
+        </li>
+        {{else}}
         <li class="nav-item">
-          <a class="nav-link" href="/users/login">Login</a>
+          <a href="/users/login" class="nav-link">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/users/register">Register</a>
+          <a href="/users/register" class="nav-link">Register</a>
         </li>
-      <li class="nav-item dropdown">
-        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink">Video ideas</a>
-        <div class="dropdown-menu">
-          <a href="/ideas" class="dropdown-item">Ideas</a>
-          <a href="ideas/add" class="dropdown-item">Ideas Add</a>
-          <a href="#" class="dropdown-item">Logout</a>     
-        </div>
-      </li>
+        {{/if}}
       </ul>
     </div>
   </div>
